# kaggle-data-sciense

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
.kaggle/: kaggle.json
docs/: README.md  data_spec.md  eda.md  experiments.md  overview.md
notebooks/: store_sales_competition.ipynb
src/store_sales/: __init__.py  cli.py  core.py
src/store_sales_99.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
