[project]
name = "store-sales-99"
version = "0.1.0"
description = "Kaggle Store Sales baseline, CV, and submission workflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "kaggle>=1.6.17",
  "matplotlib>=3.9",
  "numpy>=2.2",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "seaborn>=0.13",
  "statsmodels>=0.14",
  "xgboost>=2.1",
]

[project.scripts]
store-sales = "store_sales.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
